02-ingress/for_k8s_up_to_1_18/04_ingress_fanout_regexps.yml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: fanout-red-yellow
  annotations:
    # use the shared ingress-nginx
    kubernetes.io/ingress.class: "nginx"
    nginx.ingress.kubernetes.io/rewrite-target: /$1
spec:
  rules:
  - host: student.labs.sass.ro
    http:
      paths:
      - path: /red/(.*)
        backend:
          serviceName: svc-red
          servicePort: 8081
      - path: /yellow/(.*)
        backend:
          serviceName: svc-yellow
          servicePort: 8082
