02-ingress/for_k8s_up_to_1_18/05_ingress_fanout_regexps.yml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: fanout-red-yellow
  annotations:
    # use the shared ingress-nginx
    kubernetes.io/ingress.class: "nginx"
    nginx.ingress.kubernetes.io/rewrite-target: /$1
    nginx.ingress.kubernetes.io/configuration-snippet: |
      rewrite ^(/red)$ $1/ redirect;
      rewrite ^(/yellow)$ $1/ redirect;
spec:
  rules:
  - host: student.labs.sass.ro
    http:
      paths:
      - path: /red/(.*)
        backend:
          serviceName: svc-red
          servicePort: 8081
      - path: /yellow/(.*)
        backend:
          serviceName: svc-yellow
          servicePort: 8082
