02-ingress/for_k8s_up_to_1_18/06_vhosts_fanout_combined.yml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: full-green-blue-red-yellow
  annotations:
    # use the shared ingress-nginx
    kubernetes.io/ingress.class: "nginx"
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
  - host: student.labs.sass.ro
    http:
      paths:
      - path: /red
        backend:
          serviceName: svc-red
          servicePort: 8081
      - path: /yellow
        backend:
          serviceName: svc-yellow
          servicePort: 8082
  - host: blue.labs.sass.ro
    http:
      paths:
      - path: /
        backend:
          serviceName: svc-blue
          servicePort: 8080
  - host: green.labs.sass.ro
    http:
      paths:
      - path: /
        backend: 
          serviceName: svc-green
          servicePort: 8080
