02-ingress/for_k8s_up_to_1_18/07_ingress_fanout_v2.yml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /$2
  name: paths-red-yellow
spec:
  rules:
  - host: student.labs.sass.ro
    http:
      paths:
      - backend:
          serviceName: svc-red
          servicePort: 8081
        path: /red(/|$)(.*)
      - backend:
          serviceName: svc-yellow
          servicePort: 8082
        path: /yellow(/|$)(.*)
